Streamline StackWalker code

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: core-libs
    • None
    • b116

      After a fair amount of investigation, it looks like JDK-8141239 should wait for a later time. However, the work yielded some footprint and code reduction changes we'd like to put into JDK 9:

      * Refactor to streamline StackStreamFactory (no longer have separate classes[] and StackFrame arrays) and StackFrameInfo (use a StackTraceElement for storage, remove redundant methodName/fileName/lineNumber fields);

      * Remove flags left in to ease benchmarking (-XX:+MemberNameInStackFrame, stackwalk.newThrowable), plus and related code

      * Remove unneeded (for now) StackStreamFactory.StackTrace class and related code

            Assignee:
            Brent Christian
            Reporter:
            Brent Christian
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: