8153123: Streamline StackWalker code

Reviewed-by: coleenp, dfuchs, mchung, redestad